--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,9 @@
     "polymer": "Polymer/polymer#^1.0.0",
     "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.0",
     "paper-fab": "PolymerElements/paper-fab#^1.0.0",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#~1.0.2"
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#~1.0.2",
+    "paper-item": "PolymerElements/paper-item#^1.0.0",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.0",
+    "paper-material": "PolymerElements/paper-material#^1.0.0"
   }
 }
